meta tags updated

--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Primary Meta Tags -->
-    <title>dat-In</title>
+    <title>Online Dating - Meet Singles for Friendship</title>
+    <meta name="title" content="Online Dating - Meet Singles for Friendship">
+    <meta name="description" content="Online Dating Website - Meet Singles for chat, friendship, or online dating">
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dat-in-tarique.netlify.app/">
+    <meta property="og:title" content="Online Dating - Meet Singles for Friendship">
+    <meta property="og:description" content="Online Dating Website - Meet Singles for chat, friendship, or online dating">
+    <meta property="og:image" content="https://ibb.co/FW476pz">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://dat-in-tarique.netlify.app/">
+    <meta property="twitter:title" content="Online Dating - Meet Singles for Friendship">
+    <meta property="twitter:description" content="Online Dating Website - Meet Singles for chat, friendship, or online dating">
+  <meta property="twitter:image" content="https://ibb.co/FW476pz">
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
