--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta property="og:url" content="https://dat-in-tarique.netlify.app/">
     <meta property="og:title" content="Online Dating - Meet Singles for Friendship">
     <meta property="og:description" content="Online Dating Website - Meet Singles for chat, friendship, or online dating">
-    <meta property="og:image" content="https://ibb.co/FW476pz">
+    <meta property="og:image" content="https://i.postimg.cc/nV0sqTST/onlinedating.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://dat-in-tarique.netlify.app/">
     <meta property="twitter:title" content="Online Dating - Meet Singles for Friendship">
     <meta property="twitter:description" content="Online Dating Website - Meet Singles for chat, friendship, or online dating">
-  <meta property="twitter:image" content="https://ibb.co/FW476pz">
+  <meta property="twitter:image" content="https://i.postimg.cc/nV0sqTST/onlinedating.png">
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
