--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- ---NavBar_Section--- -->
         <div class="container-fluid nabar_banner_sec">
           <div
-            class="row header_sec px-5 justify-content-between align-items-center"
+            class="row header_sec px-5 justify-content-between align-items-center sticky-top"
           >
             <div class="col-auto">
               <img class="datum_logo" src="./images/datum_logo.svg" alt="" />
@@ -187,7 +187,7 @@
                 class="col-auto d-flex justify-content-center align-items-center mb-3"
               >
                 <div class="col pl-5">
-                  <h1>Check out Our App</h1>
+                  <h1>Check out our app</h1>
                   <p>
                     The best way to find matches nearby is to go the newest
                     version of the mobile app.
