--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- ---NavBar_Section--- -->
         <div class="container-fluid nabar_banner_sec">
           <div
-            class="row header_sec px-5 justify-content-between align-items-center sticky-top"
+            class="row header_sec px-5 justify-content-between align-items-center"
           >
             <div class="col-auto">
               <img class="datum_logo" src="./images/datum_logo.svg" alt="" />
@@ -76,7 +76,7 @@
         <div
           class="container-fluid swipe_life_sec d-flex justify-content-center align-items-center"
         >
-          <h3 class="swipe_text text-white">SWIPE LIFE</h3>
+          <h3 class="swipe_text mb-0 text-white">SWIPE LIFE</h3>
         </div>
 
         <!-- ---Dating app features Sec--- -->
@@ -187,7 +187,7 @@
                 class="col-auto d-flex justify-content-center align-items-center mb-3"
               >
                 <div class="col pl-5">
-                  <h1>Check out our app</h1>
+                  <h1>Check out Our App</h1>
                   <p>
                     The best way to find matches nearby is to go the newest
                     version of the mobile app.
@@ -207,17 +207,17 @@
         <div class="container-fluid footer__bottom_sec bg-dark">
           <div class="row justify-content-center align-items-center h-100">
             <div class="col-auto text-center">
-                <p class="text-white mb-0">Privacy Policy
+                <p class="mb-0 footer_text">Privacy Policy
                   <span class="rounded-circle dot ml-3"></span>
                 </p>
             </div>
             <div class="col-auto text-center">
-              <p class="text-white mb-0">Terms Of Condiitons
+              <p class="mb-0 footer_text">Terms Of Condiitons
                 <span class="rounded-circle dot ml-3"></span>
               </p>
           </div>
           <div class="col-auto text-center">
-            <p class="text-white mb-0">Cookie Policy
+            <p class="mb-0 footer_text">Cookie Policy
             </p>
         </div>
            
