hover effect updated

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
             class="row header_sec px-5 justify-content-between align-items-center"
           >
             <div class="col-auto">
-              <img class="datum_logo" src="./images/datum_logo.svg" alt="" />
+              <a href="#app__features__datum">
+              <img class="datum_logo" src="./images/datum_logo.svg" id="datum__logo__img" alt="" />
+              </a>
             </div>
             <div class="col-auto">
               <div class="row justify-content-around">
@@ -147,7 +149,7 @@
           </div>
         </div>
         <!-- -----App Features---- -->
-        <div class="container-fluid app__features_sec">
+        <div class="container-fluid app__features_sec" id="app__features__datum">
           <div class="row app__features text-center py-5 px-5">
             <div class="col-12 col-lg-4 mb-3 features_img">
               <img
@@ -187,7 +189,7 @@
                 class="col-auto d-flex justify-content-center align-items-center mb-3"
               >
                 <div class="col pl-5">
-                  <h1>Check out Our App</h1>
+                  <h1>Check out our app</h1>
                   <p>
                     The best way to find matches nearby is to go the newest
                     version of the mobile app.
@@ -225,5 +227,12 @@
         </div>
       </div>
     </div>
+
+     <!-- ----------Js ----------- -->
+
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./Js/script.js">
+      
+    </script>
   </body>
 </html>
