--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- ---NavBar_Section--- -->
         <div class="container-fluid nabar_banner_sec">
           <div
-            class="row header_sec px-5 justify-content-between align-items-center"
+            class="row header_sec px-5 justify-content-between align-items-center sticky-top"
           >
             <div class="col-auto">
               <a href="#app__features__datum">
