hover effect updated

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- ---NavBar_Section--- -->
         <div class="container-fluid nabar_banner_sec">
           <div
-            class="row header_sec px-5 justify-content-between align-items-center sticky-top"
+            class="row header_sec px-5 justify-content-between align-items-center sticky-top  header_sticky_shadow"
           >
             <div class="col-auto">
               <a href="#app__features__datum">
@@ -231,6 +231,7 @@
      <!-- ----------Js ----------- -->
 
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script src="./Js/jquery.waypoints.min.js"></script>
     <script src="./Js/script.js">
       
     </script>
