--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
         <!-- ---NavBar_Section--- -->
         <div class="container-fluid nabar_banner_sec">
           <div
-            class="row header_sec px-5 justify-content-between align-items-center sticky-top  header_sticky_shadow"
+            class="row header_sec px-5 justify-content-between align-items-center sticky-top header_sticky_shadow"
           >
             <div class="col-auto">
               <a href="#app__features__datum">
               <img class="datum_logo" src="./images/datum_logo.svg" id="datum__logo__img" alt="" />
+              <img class="datum_logo_black datum_logo d-none" src="./images/datun_logo_black.svg" id="datum__logo__img" alt="" />
+
               </a>
             </div>
             <div class="col-auto">
