--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           >
             <div class="col-auto">
               <a href="#app__features__datum">
-              <img class="datum_logo" src="./images/datum_logo.svg" id="datum__logo__img" alt="" />
+              <img class="datum_logo datum_logo_white" src="./images/datum_logo.svg" id="datum__logo__img" alt="" />
               <img class="datum_logo_black datum_logo d-none" src="./images/datun_logo_black.svg" id="datum__logo__img" alt="" />
 
               </a>
