--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <link rel="stylesheet" href="./css/media_query.css">
   </head>
   <body>
-    <div class="container-fluid main_section">
+    <div class="col-12 main_section">
       <div class="row">
         <!-- ---NavBar_Section--- -->
-        <div class="container-fluid nabar_banner_sec">
+        <div class="col-12 nabar_banner_sec">
           <div
             class="row header_sec px-5 justify-content-between align-items-center sticky-top header_sticky_shadow"
           >
@@ -91,13 +91,13 @@
         </div>
         <!-- -------swipe-life-sec--- -->
         <div
-          class="container-fluid swipe_life_sec d-flex justify-content-center align-items-center"
+          class="col-12 swipe_life_sec d-flex justify-content-center align-items-center"
         >
           <h3 class="swipe_text mb-0 text-white">SWIPE LIFE</h3>
         </div>
 
         <!-- ---Dating app features Sec--- -->
-        <div class="container-fluid dating__app_features__sec py-5">
+        <div class="col-12 dating__app_features__sec py-5">
           <div class="row row-cols-xl-2 row-cols-lg-2 row-cols-md-1 row-cols-sm-1 row-cols-1 align-items-center">
             <div class="col text-center  w-100">
               <div class="mobile__image">
@@ -164,7 +164,7 @@
           </div>
         </div>
         <!-- -----App Features---- -->
-        <div class="container-fluid app__features_sec" id="app__features__datum">
+        <div class="col-12 app__features_sec" id="app__features__datum">
           <div class="row app__features text-center py-5 px-5">
             <div class="col-12 col-lg-4 mb-3 features_img">
               <img
@@ -221,7 +221,7 @@
           </div>
         </div>
         <!-- ----- -->
-        <div class="container-fluid footer__bottom_sec bg-dark">
+        <div class="col-12 footer__bottom_sec bg-dark">
           <div class="row justify-content-center align-items-center h-100">
             <div class="col-auto text-center">
                 <p class="mb-0 footer_text">Privacy Policy
