--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
           <div class="col-12">
             <div class="row justify-content-between align-items-center">
 
-              <div class="col-auto">
+              <div class="col-12 col-lg-6 text-center
+              mb-5 mb-lg-0
+              px-5 px-lg-0 text-lg-left">
                 <h1>Check out our app</h1>
                 <p>
                   The best way to find matches nearby is to go the newest
@@ -180,7 +182,7 @@
                 <img class="img-fluid mr-2 mb-2" src="./images/app_store.svg" alt="" />
                 <img class="img-fluid mb-2" src="./images/play_store.svg" alt="" />
               </div>
-              <div class="col-auto text-center mb-3">
+              <div class="col-12 col-lg-6 text-center text-lg-right mb-3">
                 <img class="match__img" src="./images/Group 42975.png" alt="" />
               </div>
 
