--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
           </div>
         </div>
         <!-- checkout_sec our app-->
-        <div class="container checkout__sec bg-white py-4 px-5">
+        <div class="container checkout__sec bg-white">
           <div class="col-12">
-            <div class="row justify-content-between align-items-center">
+            <div class="row justify-content-between align-items-center py-4 px-5">
 
               <div class="col-12 col-lg-6 text-center
               mb-5 mb-lg-0
