cntainer-fluid to col-12 updated

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
               <div class="col-12 col-lg-6 text-center
               mb-5 mb-lg-0
-              px-5 px-lg-0 text-lg-left">
+              px-lg-0 text-lg-left">
                 <h1>Check out our app</h1>
                 <p>
                   The best way to find matches nearby is to go the newest
