--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="features__text__sec">
               <div class="d-flex">
                 <div class="circle__round__icon rounded-circle d-inline-block mr-4 mt-3"></div>
-                <span class="features__text">There is Random Video Calling!</span>
+                <span class="features__text">There is random video calling!</span>
               </div>
               <p class="pt-4 pl-5">
                 Along with all the cool features, it also has this feature so users can get on video call with random
