cntainer-fluid to col-12 updated

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-  <div class="col-12 main_section">
+  <div class="container-fluid main_section">
     <div class="row">
       <!-- ---NavBar_Section--- -->
       <div class="col-12 nabar_banner_sec">
