--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
       <!-- -------swipe-life-sec--- -->
       <div class="col-12 swipe_life_sec d-flex justify-content-center align-items-center">
-        <h3 class="swipe_text mb-0 text-white">SWIPE LIFE</h3>
+        <h3 class="swipe_text mb-0 text-white ">Swipe Life</h3>
       </div>
 
       <!-- ---Dating app features Sec--- -->
