--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           </div>
           <div class="col-auto">
             <div class="row justify-content-around">
-              <div class="col">
-                <button type="button" class="login_btn">
+              <div class="col login_btn_sec">
+                <button type="button">
                   <span class="login_text">Log in</span>
                 </button>
               </div>
