--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="col-auto">
             <div class="row justify-content-around">
               <div class="col login_btn_sec">
-                <button type="button">
+                <button type="button" class="login_btn">
                   <span class="login_text">Log in</span>
                 </button>
               </div>
