--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="col-auto">
             <div class="row justify-content-around">
               <div class="col login_btn_sec">
-                <button type="button" class="login_btn">
+                <button type="button" class="btn btn-outline-none login_btn">
                   <span class="login_text">Log in</span>
                 </button>
               </div>
@@ -79,7 +79,7 @@
             <h1>Start something epic</h1>
           </div>
           <div class="col banner_sec_btn pt-5">
-            <button type="button" class="signup_btn text-white">
+            <button type="button" class="btn btn-outline-none signup_btn text-white">
               Signup
             </button>
           </div>
